2006-10-13  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/models/article_sweeper.rb (ArticleSweeper::expire_for): Add to erase 'noteslist'.

2006-10-12  Akira TAGOH  <at@gclab.org>

	* donrails/app/views/login/form_article.rhtml: choose the format from
	things is currently available on system.

2006-10-11  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/controllers/login_controller.rb (LoginController): Fix to observe Enrollment. (Fix to erase Enrollment cache file.)
	* donrails/app/models/article_sweeper.rb (ArticleSweeper::expire_for): likewise.

	* donrails-1.3.8

	* donrails/lib/modules/html.rb (DonRails::HTML::body_to_xml): Fix to parse &nbsp;.

2006-10-09  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails-1.3.6
	
	* donrails/app/models/article_sweeper.rb (ArticleSweeper::expire_for): Fix it.

	* donrails-1.3.5
	
	* donrails/tool/tables-mysql.sql: Fix to use article_id.

	* donrails/app/apis/meta_weblog_service.rb (MetaWeblogService::newMediaObject): New method for image update.
	* donrails/app/models/picture.rb (Picture::filesave): likewise.

2006-10-08  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/models/article_sweeper.rb 
	(ArticleSweeper::expire_for): Fix to clear article when Picture/Enrollment update.

2006-10-07  Akira TAGOH  <at@gclab.org>

	IMPORTANT: incompatible changes. BASEURL doesn't include the paths
	anymore such as 'notes', which managed on RoR. it shouldn't be
	configurable by any outside RoR, because it could be misleading easily
	in some functions.

	* donrails/app/models/ping.rb (Ping::send_ping_rest): add 'notes' in
	URL.

	* donrails/app/models/ping.rb (Ping::send_ping_xmlrpc): likewise.

	* donrails/app/models/ping.rb (Ping::send_ping_xmlrpc_extended):
	likewise.

	* donrails/app/models/article.rb (Article::sendping): likewise.

	* donrails/app/models/comment_mailer.rb (CommentMailer::notify):
	likewise.

	* donrails/app/controllers/login_controller.rb (LoginController::fix_article):
	likewise.