@@ -1,3 +1,4 @@
+<%= @flash[:notice] %>
 <h1>login</h1>
 <%= secure_form_tag :action => 'authenticate' %>
 name:
